# embassy-nrf51

./: .gitignore  README.md
embassy-nrf51-time-driver-rtc1/: Cargo.toml  README.md
embassy-nrf51-time-driver-rtc1/src/: lib.rs  time_driver_rtc1.rs
examples/: Cargo.toml
examples/.cargo/: config.toml
