[package]
name = "embassy-nrf51-time-driver-rtc1"
version = "0.1.0"
authors = ["https://github.com/nedv-eu"]
edition = "2021"


[dependencies]
nrf51-pac = "0"
embassy = { git = "https://github.com/embassy-rs/embassy.git", rev = "e10fc2bada1c59420431f09a35f7aa09a5b45623", features = ["time", "time-tick-32768hz"]}
embassy-macros = { git = "https://github.com/embassy-rs/embassy.git", rev = "e10fc2bada1c59420431f09a35f7aa09a5b45623", features = ["nrf"]}
embassy-hal-common = { git = "https://github.com/embassy-rs/embassy.git", rev = "e10fc2bada1c59420431f09a35f7aa09a5b45623" }
critical-section = "0.2.5"
cortex-m = "0.7.3"
