[package]
name = "app"
version = "0.1.0"
authors = ["TBD"]
edition = "2018"

[dependencies]
cortex-m = "0.7.4"
cortex-m-rt = "0.7.1"
defmt = "0.3.1"
defmt-rtt = "0.3.2"
panic-probe = { version = "0.3.0", features = ["print-defmt"] }
nrf51-hal = { version = "0.15.0", features = ["rt"] }
embassy = { git = "https://github.com/embassy-rs/embassy.git", rev = "e10fc2bada1c59420431f09a35f7aa09a5b45623", features = ["defmt", "defmt-timestamp-uptime"]}
embassy-nrf51-time-driver-rtc1 = { path = "../embassy-nrf51-time-driver-rtc1"}



[profile.dev]
codegen-units = 1 # better optimizations
debug = true 
lto = true # better optimizations
opt-level = 0 # 's' or 'z', 'z' == 's' + disable loop vectorization 
incremental = false
overflow-checks = true
debug-assertions = true

[profile.dev.package."*"]
opt-level = 's'  # 's' or 'z', 'z' == 's' + disable loop vectorization

[profile.test]
codegen-units = 1
debug = true 
lto = true # better optimizations
opt-level = 's' #  's' or 'z', 'z' == 's' + disable loop vectorization 
incremental = false
overflow-checks = true
debug-assertions = true 

[profile.release]
codegen-units = 1 # better optimizations
debug = true 
lto = true  # better optimizations
opt-level = 's'  # 's' or 'z', 'z' == 's' + disable loop vectorization 
incremental = false
overflow-checks = false 
debug-assertions = false
